fixed overlapping menus on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -228,6 +228,10 @@ input[type=range]:focus::-ms-fill-upper {
     height: 35vh;
   }
 
+  @include bp(small) {
+    height: 30vh;
+  }
+
   &.active {
     visibility: visible;
     background: $off-white;
@@ -237,6 +241,11 @@ input[type=range]:focus::-ms-fill-upper {
     @include bp(medium) {
       width: 100%;
       height: 35vh;
+    }
+
+    @include bp(small) {
+      width: 100%;
+      height: 30vh;
     }
 
     &:before {
@@ -300,6 +309,11 @@ input[type=range]:focus::-ms-fill-upper {
     top: 50vh;
   }
 
+  @include bp(small) {
+    height: 30vh;
+    top: 45vh;
+  }
+
     &.active {
       background: $off-white;
       width: 350px;
@@ -309,6 +323,12 @@ input[type=range]:focus::-ms-fill-upper {
         width: 100%;
         height: 35vh;
         top: 50vh;
+      }
+
+      @include bp(small) {
+        width: 100%;
+        height: 30vh;
+        top: 45vh;
       }
 
       &:before {
